# wxai-deployable-ai-services-and-functions

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/TEMPLATES/: _ibmcloud.env.TEMPLATE  _wxai.env.TEMPLATE  _wxai_sw.env.TEMPLATE
deployable_ai_services/ai_service_runtime_debugger/: ai_service_runtime_debugger.py  ai_service_runtime_debugger_request_schema.json  ai_service_runtime_debugger_response_schema.json
deployable_ai_services/deployable_ai_service_template/: deployable_ai_service_request_schema.json  deployable_ai_service_response_schema.json  deployable_ai_service_template.py
deployable_functions/deployable_function_template/: deployable_function_input_schema.json  deployable_function_output_schema.json  deployable_function_template.py
deployable_functions/function_runtime_debugger/: runtime_debugger_function.py  runtime_debugger_function_input_schema.json  runtime_debugger_function_output_schema.json
deployable_functions/migrate_cos_buckets/: migrate_cos_buckets_function.py  migrate_cos_buckets_function_input_schema.json  migrate_cos_buckets_function_output_schema.json
documentation/wxai_deployable_ai_services/: Writing watsonx.ai Deployable AI Services.md  writing_deployable_wxai_ai_services.md
documentation/wxai_deployable_python_functions/: Writing watsonx.ai Deployable Python Functions.md
documentation/wxai_deployment_docs/: ibm-watsonx-ai SDK Docs: Deployments.md  ibm-watsonx-ai SDK Docs: Parameter Sets.md  watsonx.ai Batch Deployment Documentation.md  watsonx.ai Online Deployment Documentation.md
(+11 files in other folders)
