[project]
name = "wxai-deployable-ai-services-and-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "astrapy>=2.2.1",
    "confluent-kafka>=2.13.2",
    "duckdb[all]>=1.5.1",
    "ibm-watsonx-ai>=1.5.5",
    "ibmcloudant>=0.11.5",
    "jinja2>=3.1.6",
    "jsonpath-python>=1.1.5",
    "kafka-python>=2.3.0",
    "kreuzberg[all]>=4.6.3",
    "marimo[mcp]>=0.21.1",
    "pydantic-ai>=1.73.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "transformers>=5.4.0",
    "uv>=0.11.2",
    "wigglystuff>=0.3.1",
]
