[project]
name = "wxai-deployable-ai-services-and-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibm-watsonx-ai>=1.5.5",
    "jinja2>=3.1.6",
    "jsonpath-python>=1.1.5",
    "marimo[mcp]>=0.21.1",
    "pydantic-ai>=1.82.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "transformers>=5.4.0",
    "uv>=0.11.2",
]
